# eu-economic-monitor-bruin

./: .gitignore  README.md  pyproject.toml  run.bat  start_dashboard.bat
bruin_pipeline/: README.md  pipeline.yml  pyproject.toml
bruin_pipeline/assets/: dashboard_link.py
bruin_pipeline/assets/ingestion/: ingest_energy.py  ingest_gdp.py  ingest_inflation.py  ingest_unemployment.py
bruin_pipeline/assets/marts/: mart_composite_economic_index.sql  mart_country_latest.sql  mart_energy_intensity.sql  mart_gdp_trends.sql  mart_unemployment_comparison.sql
bruin_pipeline/assets/staging/: stg_energy.sql  stg_gdp.sql  stg_inflation.sql  stg_unemployment.sql
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/pages/: 1_GDP_Analysis.py  2_Unemployment.py  3_Energy_Intensity.py  4_Composite_Index.py
dashboard/utils/: __init__.py  charts.py  duckdb_client.py  style.py
