[project]
name = "eu-economic-monitor"
version = "1.0.0"
description = "EU Economic Monitor - Bruin + DuckDB + Streamlit"
requires-python = ">=3.11"
dependencies = [
    # Dashboard
    "streamlit>=1.33.0",
    "plotly>=5.22.0",
    "pandas>=2.2.2",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    # Database
    "duckdb>=1.5.0",
    # Pipeline (also used by Bruin assets)
    "eurostat>=1.0.0",
]

[dependency-groups]
dev = []
